# llama-layer-collector

./: .gitignore  README.md  __init__.py  cache.py  compute.py  helpers.py  layer_data.py  layer_data_collector.py  llm_layer_collector.py  load_layer.py  pyproject.toml  test.py  todo.txt  util.py
.github/workflows/: publish.yml
src/llama-layer-collector/: cache.py  llama_layer_collector.py
src/llama_layer_collector/: __init__.py  compute.py  layer_collector.py  load_layer.py  state_obj.py
src/llama_layer_collector/auto/: auto_layer.py  auto_rms.py  auto_rotary.py
test/: test.py
tests/: collector.py
