[build-system]
requires = ["hatchling", "transformers", "torch", "safetensors"]
build-backend = "hatchling.build"

[project]
name = "llama_layer_collector"
version = "1.0.0"
authors = [{name="Erin Clemmer", email="erin.c.clemmer@gmail.com"}]
description = "A tool for loading and computing on parts of Llama models."
keywords = ["llama", "transformers", "torch", "safetensors"]
license = "MIT"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = "==3.10"

[project.urls]
Homepage = "https://github.com/erinclemmer/llama_layer_collector"
Issues = "https://github.com/erinclemmer/llama_layer_collector/issues"